# bare-metal-series

./: CMakeLists.txt  README.md
BSP/: BSP.ioc  Makefile
BSP/Core/Inc/: main.h
BSP/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
source/: application.c  pad-bootloader.py
source/app/: STM32F401RETx_FLASH.ld  application.c  application.h  bootloader_code.c  firmware.c  firmware.h
source/app/system/: stm32f4xx_it.c
source/app/uart/: uart.c  uart.h
source/bootloader/: STM32F401RETx_FLASH.ld  comms.c  comms.h  firmware.c  firmware.h  retarget.c  stm32f4xx_it.c
source/bootloader/system/: stm32f4xx_it.c
source/bootloader/uart/: uart.c
source/shared/crc/: crc8.c  crc8.h
source/shared/ring_buffer/: ring_buffer.c  ring_buffer.h
source/shared/uart/: uart.c  uart.h
